fix: cors settings